--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,8 +1,10 @@
-name: Playwright Tests on External Repo Push/PR
+name: Taller Automation Playwright E2E Tests
 
 on:
-  repository_dispatch:
-    types: [run_playwright_tests]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -31,12 +33,8 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: npx playwright test
-
-      - name: Publish Test Summary Results
-        run: npx github-actions-ctrf reports/test-results.json
-        if: always()        
-
+        run: npm run test
+        
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
         if: always()
